--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 
   <div class="todo-container">
     <h1>TODOリスト</h1>
+    <p>誰でも手軽にホストできるオープンソースのToDoリストです。</p>
+    <a href="//github.com/chito-jp/todo">Github</a>
     <input type="text" id="todo-input" placeholder="新しいタスクを入力..." />
     <button id="add-btn">タスク追加</button>
     <ul class="todo-list" id="todo-list"></ul>
