--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      box-sizing: border-box;
     }
 
     .todo-container {
@@ -21,33 +22,58 @@
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       width: 100%;
-      max-width: 400px;
-      padding: 20px;
+      max-width: 450px;
+      padding: 25px;
+      box-sizing: border-box;
     }
 
     h1 {
       text-align: center;
       color: #333;
+      font-size: 2rem;
+      margin-bottom: 15px;
+    }
+
+    p {
+      text-align: center;
+      color: #777;
+      font-size: 1rem;
+      margin-bottom: 10px;
+    }
+
+    a {
+      display: block;
+      text-align: center;
+      color: #4CAF50;
+      text-decoration: none;
+      font-size: 1rem;
+      margin-bottom: 20px;
     }
 
     input[type="text"] {
       width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
+      padding: 12px;
+      margin-bottom: 15px;
       border: 1px solid #ccc;
       border-radius: 4px;
+      font-size: 1rem;
       box-sizing: border-box;
+      outline: none;
+    }
+
+    input[type="text"]:focus {
+      border-color: #4CAF50;
     }
 
     button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       background-color: #4CAF50;
       color: white;
       border: none;
       border-radius: 4px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 1.1rem;
     }
 
     button:hover {
@@ -57,14 +83,23 @@
     .todo-list {
       list-style: none;
       padding: 0;
+      margin: 0;
     }
 
     .todo-item {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px;
+      padding: 12px;
       border-bottom: 1px solid #ddd;
+      font-size: 1rem;
+      background-color: #fafafa;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+
+    .todo-item:hover {
+      background-color: #f1f1f1;
     }
 
     .todo-item.complete {
@@ -72,19 +107,24 @@
       color: #888;
     }
 
+    .todo-text {
+      flex-grow: 1;
+      padding-right: 15px;
+    }
+
     .todo-item button {
       background-color: #f44336;
       color: white;
       border: none;
-      padding: 5px 10px;
+      padding: 6px 12px;
       border-radius: 4px;
       cursor: pointer;
+      font-size: 0.9rem;
     }
 
     .todo-item button:hover {
       background-color: #d32f2f;
     }
-
   </style>
 </head>
 <body>
