--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <title>ToDoリスト</title>
+</head>
+<body>
+    <main>
+        <div class="container"></div>
+    </main>
+</body>
+</html>
